package com.lab3.entities;

public abstract class Animal extends Character {
  Animal(String name) { super(name); }
}
