package com.lab3.interfaces;
import com.lab3.enums.AgeTypes;


public interface AbleToAge {
	public AgeTypes getAgeType();
	public void setAgeType(AgeTypes ageType);
}
