package com.lab3.interfaces;


interface Feeling { 
	public boolean isAngry; 
	public void becameAngry(Character)
}

